--- a/assets/style.css
+++ b/assets/style.css
@@ -8,9 +8,10 @@
 	font-size: 1.75em;
 	margin-top: 90px;
 }
-/* #messagePalace {
-	margin-top: -70px;
-} */
+#messagePalace {
+	position: relative;
+	top: -60px;
+}
 
 #numbersArea {
 	box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 8px 0px;
