--- a/assets/style.css
+++ b/assets/style.css
@@ -1,32 +1,37 @@
+/* fixed button width */
 .btn {
-	width: 375px;
+	width: 325px;
 }
-
+/* main text area (where question appear) */
 #magicHole {
 	height: 160px;
 	font-family: 'Playfair Display', serif;
 	font-size: 1.75em;
 	margin-top: 90px;
 }
+/* instructions on start page */
 #messagePalace {
 	position: relative;
 	top: -60px;
 }
-
+/* time and scores section */
 #numbersArea {
 	box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 8px 0px;
 }
-
+/* main card body */
 #standardCardBody {
 	box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 8px 0px;
 	padding-bottom: 20px;
 }
 
-#fart {
-	text-align: left;
-}
-
-/* table stuff */
+/* modal table */
 th {
 	width: 100px;
+}
+
+/* media query */
+@media screen and (max-width: 576px) {
+	body {
+		font-size: .75em;
+	}
 }
